# parser

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  OWNERS  README.md  RELEASE.md  build.sh  classify_rule.txt  classify_rule.yaml
cmake/: function.cmake  intf_pub_linux.cmake
cmake/external_libs/: gflags.cmake  gtest.cmake  json.cmake  onnx.cmake  protobuf_shared.cmake  protoc.cmake  (+2 more)
parser/: CMakeLists.txt  module.mk
parser/caffe/: caffe_custom_parser_adapter.cc  caffe_custom_parser_adapter.h  caffe_data_parser.cc  caffe_data_parser.h  caffe_op_parser.cc  caffe_op_parser.h  caffe_parser.cc  caffe_parser.h  caffe_reshape_parser.cc  caffe_reshape_parser.h
parser/common/: CMakeLists.txt  acl_graph_parser_util.cc  acl_graph_parser_util.h  auto_mapping_subgraph_io_index_func.cc  auto_mapping_subgraph_io_index_func.h  data_op_parser.cc  data_op_parser.h  graph_pass.h  model_saver.cc  model_saver.h  module.mk  op_map.cc  op_map.h  op_parser_factory.cc  op_parser_factory.h  op_registration_tbe.cc  op_types.h  parser_api.cc  parser_factory.cc  parser_fp16_t.cc  parser_fp16_t.h  parser_inner_ctx.cc  parser_types.cc  parser_utils.cc  parser_utils.h  pass.h  pass_manager.cc  pass_manager.h  pre_checker.cc  pre_checker.h  proto_file_parser.cc  proto_file_parser.h  prototype_pass_manager.cc  prototype_pass_manager.h  register_tbe.cc  register_tbe.h  tbe_plugin_loader.cc  tbe_plugin_loader.h  thread_pool.cc  thread_pool.h  (+3 more)
parser/common/convert/: message2operator.cc  message2operator.h  pb2json.cc  pb2json.h
parser/common/op_def/: arg_op.cc  arg_op.h  arg_op_operator.cc  arg_op_operator.h  constant_op.cc  constant_op.h  constant_operator.cc  constant_operator.h  defs.cc  fill_op.cc  fill_op.h  fill_operator.cc  fill_operator.h  framework_op_operator.cc  framework_op_operator.h  frameworkop_op.cc  frameworkop_op.h  ir_pb_converter.cc  ir_pb_converter.h  no_op_op.cc  no_op_op.h  no_op_operator.cc  no_op_operator.h  op_schema.cc  op_schema.h  operator.cc  operator.h  ref_switch_op.cc  ref_switch_op.h  ref_switch_operator.cc  ref_switch_operator.h  shape_n_op.cc  shape_n_op.h  shape_n_operator.cc  shape_n_operator.h  var_is_initialized_op_op.cc  var_is_initialized_op_op.h  var_is_initialized_op_operator.cc  var_is_initialized_op_operator.h  variable_op.cc  (+3 more)
parser/common/proto/: ge_ir.proto  insert_op.proto
parser/func_to_graph/: CMakeLists.txt  func2graph.py  module.mk  proto_python_rule.mk
parser/onnx/: CMakeLists.txt  module.mk  onnx_constant_parser.cc  onnx_constant_parser.h  onnx_custom_parser_adapter.cc  onnx_custom_parser_adapter.h  onnx_data_parser.cc  onnx_data_parser.h  onnx_file_constant_parser.cc  onnx_file_constant_parser.h  onnx_op_parser.h  onnx_parser.cc  onnx_parser.h  onnx_util.cc  onnx_util.h
parser/onnx/subgraph_adapter/: if_subgraph_adapter.cc  if_subgraph_adapter.h  subgraph_adapter.h  subgraph_adapter_factory.cc  subgraph_adapter_factory.h
parser/ops/: op_imp.cpp
parser/proto/caffe/: CMakeLists.txt  module.mk
parser/stub/: Makefile  README.md  gen_stubapi.py
parser/tensorflow/: graph_functiondef.cc  graph_functiondef.h  graph_insert_trans_op.h  graph_optimizer.cc  graph_optimizer.h  graph_to_function_def.cc  graph_to_function_def.h  iterator_fusion_pass.cc  iterator_fusion_pass.h  parser_graph_optimizer.cc  parser_graph_optimizer.h  tensorflow_arg_parser.cc  tensorflow_auto_mapping_parser_adapter.cc  tensorflow_auto_mapping_parser_adapter.h  tensorflow_constant_parser.cc  tensorflow_constant_parser.h  tensorflow_custom_parser_adapter.cc  tensorflow_custom_parser_adapter.h  tensorflow_data_parser.cc  tensorflow_data_parser.h  tensorflow_enter_parser.cc  tensorflow_enter_parser.h  tensorflow_fill_parser.cc  tensorflow_frameworkop_parser.cc  tensorflow_fusion_custom_parser_adapter.cc  tensorflow_fusion_custom_parser_adapter.h  tensorflow_fusion_op_parser.cc  tensorflow_fusion_op_parser.h  tensorflow_fusionop_util.cc  tensorflow_fusionop_util.h  tensorflow_identity_parser.cc  tensorflow_identity_parser.h  tensorflow_merge_parser.cc  tensorflow_merge_parser.h  tensorflow_no_op_parser.cc  tensorflow_no_op_parser.h  tensorflow_op_parser.h  tensorflow_parser.cc  tensorflow_parser.h  tensorflow_parser_register.h  (+12 more)
parser/tensorflow/proto/: ge_ir.proto
parser/tensorflow/scope/: scope_pass_manager.cc  scope_pass_manager.h
tests/: CMakeLists.txt
tests/depends/graph/: CMakeLists.txt
tests/depends/graph/src/: attr_util_stub.cc
tests/ut/parser/: CMakeLists.txt  graph_builder_utils.cc  graph_builder_utils.h  parser_ut_utils.cc  parser_ut_utils.h
tests/ut/parser/testcase/: parser_unittest.cc
tests/ut/parser/testcase/caffe_parser_testcase/: caffe_parser_unittest.cc
tests/ut/parser/testcase/caffe_parser_testcase/caffe_model/: caffe_abs.pbtxt  caffe_add.caffemodel
tests/ut/parser/testcase/common/: acl_graph_parser_unittest.cc
tests/ut/parser/testcase/graph_optimizer_testcase/: graph_optimizer_unittest.cc
tests/ut/parser/testcase/onnx_parser_testcase/: message2operator_unittest.cc  onnx_parser_unittest.cc
tests/ut/parser/testcase/onnx_parser_testcase/om_json/: enumjson1.json
tests/ut/parser/testcase/onnx_parser_testcase/onnx_model/: if.py  onnx_clip_v9.py
tests/ut/parser/testcase/tensorflow_parser_testcase/: tensorflow_auto_mapping_parser_adapter_unittest.cc  tensorflow_parser_unittest.cc
tests/ut/parser/testcase/tensorflow_parser_testcase/origin_models/: getnext_dynamic_fusion.pbtxt
tests/ut/parser/testcase/tensorflow_parser_testcase/tensorflow_model/: add.pb  avgpool3dgrad_case_1.pb  caffe_abs.pbtxt  conv2d.pb  conv2d_depthwise_pb_gen.py  merge.pb  model.pb  onnx_clip_v9.onnx  onnx_clip_v9.py  onnx_const_type.onnx  onnx_if.onnx  test_VarIsInitializedOp_pb_gen.py  test_avgpool3dgrad_pb_gen.py  test_blocklstm_pb.gen.py  test_constant_pb_gen.py  test_conv2d_pb_gen.py  test_depth_wise_conv2d.pb  test_enter_pb_gen.py  test_fill.pb  test_fill_pb_gen.py  test_identity.pb  test_identity_pb_gen.py  test_no_op_pb_gen.py  test_reshape_pb_gen.py  test_sequeeze.pb  test_sequeeze_pb_gen.py  test_shape_n.pb  test_shape_n_pb_gen.py  test_switch_pb_gen.py
(+52 files in other folders)
